--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,14 @@ mysqlclient==2.0.3
 pkg-resources==0.0.0
 pytz==2021.1
 sqlparse==0.4.1
+beautifulsoup4==4.9.0
+bootstrap4==0.1.0
+django-bootstrap4==1.1.1
+django-braces==1.14.0
+django-extensions==2.2.9
+django-model-utils==4.0.0
+# django-star-ratings==0.9.1
+Pillow==7.1.1
+six==1.14.0
+soupsieve==2.0
+swapper==1.1.2.post1
