--- a/requirements.txt
+++ b/requirements.txt
@@ -2,22 +2,38 @@ asgiref==3.3.1
 astroid==2.5.2
 beautifulsoup4==4.9.0
 bootstrap4==0.1.0
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+cryptography==3.4.7
+defusedxml==0.7.1
 Django==3.1.7
 django-bootstrap4==1.1.1
 django-braces==1.14.0
+django-crispy-forms==1.11.2
 django-extensions==2.2.9
 django-model-utils==4.0.0
 django-widget-tweaks==1.4.8
+idna==2.10
 isort==5.8.0
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
 mysqlclient==2.0.3
+oauthlib==3.1.0
 Pillow==8.2.0
+pycparser==2.20
+PyJWT==2.0.1
 pylint==2.7.4
+python3-openid==3.2.0
 pytz==2021.1
+requests==2.25.1
+requests-oauthlib==1.3.0
 six==1.14.0
+social-auth-app-django==4.0.0
+social-auth-core==4.1.0
 soupsieve==2.0
 sqlparse==0.4.1
 swapper==1.1.2.post1
 toml==0.10.2
+urllib3==1.26.4
 wrapt==1.12.1
